--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
@@ -23,5 +22,10 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@heroicons/react": "^2.2.0",
+        "@material-tailwind/react": "^2.1.10",
+        "@types/react": "^18.2.19"
     }
 }
